publish lib to jCenter maven

--- a/logful/build.gradle
+++ b/logful/build.gradle
@@ -1,10 +1,10 @@
 apply plugin: 'com.android.library'
-apply plugin: 'maven'
 apply plugin: 'checkstyle'
 apply plugin: 'findbugs'
 apply plugin: 'pmd'
 
-apply plugin: 'maven'
+apply plugin: 'com.jfrog.bintray'
+apply plugin: 'com.github.dcendents.android-maven'
 
 android {
     compileSdkVersion 21
@@ -14,7 +14,7 @@ android {
         minSdkVersion 10
         targetSdkVersion 21
         versionCode 59281408
-        versionName "1.0.0"
+        versionName version
     }
 
     lintOptions {
@@ -37,17 +37,66 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 }
 
-uploadArchives {
-    repositories {
-        mavenDeployer {
-            repository(url: "http://192.168.14.217:8081/nexus/content/repositories/releases/") {
-                authentication(userName: "admin", password: "admin123")
+def siteUrl = "https://github.com/logful/logful-android"
+def issueUrl = "https://github.com/logful/logful-android/issues"
+def gitUrl = "https://github.com/logful/logful-android.git"
+
+group = "com.getui"
+version = "0.2.0"
+
+Properties properties = new Properties()
+properties.load(project.rootProject.file('local.properties').newDataInputStream())
+
+bintray {
+    user = properties.getProperty("bintray.user")
+    key = properties.getProperty("bintray.apikey")
+
+    configurations = ['archives'] //When uploading configuration files
+    pkg {
+        repo = 'maven'
+        name = 'Logful'
+        desc = 'Logful android library'
+        websiteUrl = siteUrl
+        issueTrackerUrl = issueUrl
+        vcsUrl = gitUrl
+        licenses = ['MIT']
+        labels = ['aar', 'android', 'logful']
+        publicDownloadNumbers = true
+    }
+}
+
+install {
+    repositories.mavenInstaller {
+        pom {
+            project {
+                packaging 'aar'
+                name 'Logful android library'
+                url siteUrl
+                licenses {
+                    license {
+                        name 'The MIT License (MIT)'
+                        url 'http://rem.mit-license.org/'
+                    }
+                }
+                developers {
+                    developer {
+                        id 'logful'
+                        name 'Getui'
+                        email 'support@getui.com'
+                    }
+                }
+                scm {
+                    connection gitUrl
+                    developerConnection gitUrl
+                    url siteUrl
+                }
             }
-            pom.groupId = "com.getui"
-            pom.artifactId = "logful"
-            pom.version = android.defaultConfig.versionName + "." + android.defaultConfig.versionCode
         }
     }
+}
+
+task findConventions << {
+    println project.getConvention()
 }
 
 checkstyle {
