--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,7 +85,7 @@ def changeAndroidBuildConfig() {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile project(':library')
+    compile project(':logful')
     compile 'com.android.support:appcompat-v7:22.2.0'
 }
 
