--- a/.travis.yml
+++ b/.travis.yml
@@ -19,9 +19,6 @@ android:
 
     # Specify at least one system image,
     # if you need to run emulator(s) during your tests
-
-install:
-  - true
-
+    
 script:
-  - gradle build
+  - gradle assemble
