--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,10 @@ android:
     # - tools
 
     # The BuildTools version used by your project
-    - build-tools-21.1.1
+    - build-tools-22.0.1
 
     # The SDK version used to compile your project
-    - android-21
+    - android-22
 
     # Additional components
     - extra-google-m2repository
@@ -21,4 +21,4 @@ android:
     # if you need to run emulator(s) during your tests
     
 script:
-  - gradle assemble
+  - gradle build
