--- a/logful/build.gradle
+++ b/logful/build.gradle
@@ -3,8 +3,8 @@ apply plugin: 'checkstyle'
 apply plugin: 'findbugs'
 apply plugin: 'pmd'
 
-apply plugin: 'com.jfrog.bintray'
-apply plugin: 'com.github.dcendents.android-maven'
+//apply plugin: 'com.jfrog.bintray'
+//apply plugin: 'com.github.dcendents.android-maven'
 
 android {
     compileSdkVersion 22
@@ -37,6 +37,7 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 }
 
+/*
 def siteUrl = "https://github.com/logful/logful-android"
 def issueUrl = "https://github.com/logful/logful-android/issues"
 def gitUrl = "https://github.com/logful/logful-android.git"
@@ -94,10 +95,7 @@ install {
         }
     }
 }
-
-task findConventions << {
-    println project.getConvention()
-}
+*/
 
 checkstyle {
     toolVersion = "6.6"
