--- a/gradle.properties
+++ b/gradle.properties
@@ -12,6 +12,26 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-#Sat Oct 03 21:41:52 CST 2015
-projectName=Log
-buildOutputDir=artifacts
+#Thu Nov 19 15:58:33 CST 2015
+POM_DEVELOPER_EMAIL=support@getui.co
+POM_SCM_URL=scm\:git@github.com\:logful/logful-android.git
+POM_DEVELOPER_ID=logful
+POM_LICENCE_DIST=repo
+systemProp.http.proxyHost=127.0.0.1
+POM_ARTIFACT_ID=logful
+BUILD_OUTPUT=artifacts
+POM_DEVELOPER_NAME=logful
+POM_LICENCE_URL=http\://rem.mit-license.org
+POM_DESCRIPTION=Logful Library
+POM_LICENCE_NAME=The MIT License (MIT)
+ISSUE_URL=https\://github.com/logful/logful-android/issues
+POM_NAME=Logful Library
+POM_PACKAGING=aar
+VERSION_NAME=0.2.1
+POM_SCM_DEV_CONNECTION=scm\:git@github.com\:logful/logful-android.git
+POM_URL=https\://github.com/logful/logful-android
+POM_SCM_CONNECTION=scm\:git@github.com\:logful/logful-android.git
+GROUP=com.getui
+systemProp.http.proxyPort=1080
+GIT_URL=https\://github.com/logful/logful-android.git
+POM_DEVELOPER_URL=https\://logful.github.io
