--- a/logful/build.gradle
+++ b/logful/build.gradle
@@ -43,10 +43,13 @@ android {
     packagingOptions {
         exclude 'META-INF/LICENSE.txt'
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_6
+        targetCompatibility JavaVersion.VERSION_1_7
+    }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
 }
 
 //apply from: 'library-artifacts.gradle'
