--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,8 +92,8 @@ def changeAndroidBuildConfig() {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.igexin:sdk:2.6.4.0'
     compile project(':logful')
-    //compile 'com.igexin:sdk:2.6.4.0'
     compile 'com.android.support:appcompat-v7:22.1.0'
 }
 
