--- a/gradle.properties
+++ b/gradle.properties
@@ -13,11 +13,10 @@
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 #Thu Nov 19 15:58:33 CST 2015
-POM_DEVELOPER_EMAIL=support@getui.co
+POM_DEVELOPER_EMAIL=support@getui.com
 POM_SCM_URL=scm\:git@github.com\:logful/logful-android.git
 POM_DEVELOPER_ID=logful
 POM_LICENCE_DIST=repo
-systemProp.http.proxyHost=127.0.0.1
 POM_ARTIFACT_ID=logful
 BUILD_OUTPUT=artifacts
 POM_DEVELOPER_NAME=logful
